tests/baselines/reference/noErrorUsingImportExportModuleAugmentationInDeclarationFile3.errors.txt
error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
1.ts(1,1): error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.


!!! error TS5107: Option 'module=None' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== 0.d.ts (0 errors) ====
    export = a;
    declare var a: number;
    
==== 1.ts (1 errors) ====
    export var j = "hello";  // error
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot use imports, exports, or module augmentations when '--module' is 'none'.
    